--- a/views/test.ejs
+++ b/views/test.ejs
@@ -60,22 +60,46 @@
 
         var provider = new firebase.auth.GoogleAuthProvider();
 
-        firebase.auth().signInWithPopup(provider).then(function(result) {
-            // This gives you a Google Access Token. You can use it to access the Google API.
-            var token = result.credential.accessToken;
-            // The signed-in user info.
-            var user = result.user;
+        var user;
+
+        function login() {
+            function newLoginHappened() {
+                if (user) {
+                    // user signed in
+                    alert("Signed in");
+                    app(user);
+                }
+                else {
+                    alert("Not signed in");
+                    firebase.auth().signInWithPopup(provider).then(function(result) {
+                        // This gives you a Google Access Token. You can use it to access the Google API.
+                        var token = result.credential.accessToken;
+                        // The signed-in user info.
+                        user = result.user;
+                        app(user);
+                    }).catch(function(error) {
+                        // Handle Errors here.
+                        var errorCode = error.code;
+                        var errorMessage = error.message;
+                        // The email of the user's account used.
+                        var email = error.email;
+                        // The firebase.auth.AuthCredential type that was used.
+                        var credential = error.credential;
+                        // ...
+                    });
+                }
+            }
+            firebase.auth().onAuthStateChanged(newLoginHappened);
+            
+        }
+
+        function app(user) {
             document.getElementById("username").innerHTML = user.displayName;
-        }).catch(function(error) {
-            // Handle Errors here.
-            var errorCode = error.code;
-            var errorMessage = error.message;
-            // The email of the user's account used.
-            var email = error.email;
-            // The firebase.auth.AuthCredential type that was used.
-            var credential = error.credential;
-            // ...
-        });
+        }
+
+        login();
+        
+
     </script>
 
     <script>
