--- a/views/newlobby.ejs
+++ b/views/newlobby.ejs
@@ -8,28 +8,9 @@
         <link rel="stylesheet" type="text/css" href="/style/index.css">
     </head>
     <body>
-    
-    <div class="container-fluid">
-        <div class="center">
-            <h1 class="logo">Bamboo!</h1>
-            <div class="enterInput">
-                <div class="row">
-                    <input class="roomIDInput" type="number" name="roomID" value="" placeholder="Enter Room ID">
-                </div>
-                
-                <div class="row">
-                    <button class="ButtonEnter">Enter</button>
-                </div>
-                <br />
-                <div class="row">
-                    <span class="centering">or</span>
-                </div>
-                <br />
-                <div class="row">
-                    <button class="ButtonEnter" onclick="createLobby()">Create a lobby</button>
-                </div>
-            </div>
-        </div>
+
+    <div class="container">
+        <p>Lobby ID: <span id="roomID"> <%= lobbyID %> </span></p>
     </div>
 
     <div class="footer">
@@ -37,9 +18,7 @@
     </div>
 
     <script>
-        function createLobby(){
-            window.location.href = '/newlobby'; // redirect to lobby
-        }
+        window.location = "/lobby/<%= lobbyID %>";
     </script>
 
     <!-- Bootstrap JS -->
