--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bangers');
+/* @import url('https://fonts.googleapis.com/css?family=Bangers'); */
 
 body {
     background-color: lightgreen;
