--- a/views/test.ejs
+++ b/views/test.ejs
@@ -76,6 +76,8 @@
                         var token = result.credential.accessToken;
                         // The signed-in user info.
                         user = result.user;
+                        console.log('[DEBUG] result = ');
+                        console.log(result);
                         app(user);
                     }).catch(function(error) {
                         // Handle Errors here.
