--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 
     <script>
         function createLobby(){
-            window.location.href = '/newlobby'; // redirect to lobby
+            window.location.href = '/lobby'; // redirect to lobby
         }
     </script>
 
