--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -38,7 +38,7 @@
     <script>
         // Check user signed-in
         firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
+            if (user && !user.isAnonymous) {
                 // User is signed in.
                 var displayName = user.displayName;
                 var email = user.email;
@@ -47,6 +47,9 @@
                 var isAnonymous = user.isAnonymous;
                 var uid = user.uid;
                 var providerData = user.providerData;
+
+                console.log('[DEBUG] user info:');
+                console.log(user);
 
                 // change hostname to displayName
                 $("#hostname").text(displayName);
