--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
         <link rel="stylesheet" type="text/css" href="/style/index.css">
     </head>
     <body>
@@ -12,7 +13,9 @@
     <div class="container-fluid">
         <div class="center">
             <h1 class="logo">Bamboo!</h1>
-            <div class="enterInput">
+            <div id="firebaseui-auth-container"></div>
+            <!-- <div id="loader centering">Loading...</div> -->
+            <!-- <div class="enterInput">
                <form action="/authen" method="post">
                 <div class="row">
                     <input id="username" class="roomIDInput" type="text" name="username" value="" placeholder="User name or Email">
@@ -21,7 +24,7 @@
                     <input id="password" class="roomIDInput" type="password" name="password" value="" placeholder="password">
                 </div>
                 <div class="row">
-                    <!-- <button class="ButtonEnter" onclick="authen()">Sign in</button> -->
+                    <button class="ButtonEnter" onclick="authen()">Sign in</button>
                     <input type="submit" name="Submit" value="submit" class="ButtonEnter">
                 </div>
                 </form>
@@ -33,9 +36,12 @@
                 <div class="row">
                     <button class="ButtonEnter" onclick="loginWithGoogle()">Login with Google</button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
+
+    <!-- The surrounding HTML is left untouched by FirebaseUI.
+     Your app may use that space for branding, controls and other customizations.-->
 
     <div class="footer">
         <a href="#">Terms & Privacy</a>
@@ -45,11 +51,88 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-auth.js"></script>
 
-    <script src="/javascript/config.js"></script>
-    <script>
+    <!-- add test -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <script type="text/javascript">
+
+        var config = {
+            apiKey: "AIzaSyBKheAnyvSFQtaMUwlaQ_7T-q5-Z9hmuQc",
+            authDomain: "bamboo-cda5f.firebaseapp.com",
+            databaseURL: "https://bamboo-cda5f.firebaseio.com",
+            projectId: "bamboo-cda5f",
+            storageBucket: "bamboo-cda5f.appspot.com",
+            messagingSenderId: "550416420066"
+        };
+        firebase.initializeApp(config);
+
+        // Check user signed-in
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user && !user.isAnonymous) {
+                // User is signed in.
+                var displayName = user.displayName;
+                var email = user.email;
+                var emailVerified = user.emailVerified;
+                var photoURL = user.photoURL;
+                var isAnonymous = user.isAnonymous;
+                var uid = user.uid;
+                var providerData = user.providerData;
+
+                // redirect to lobby
+                window.location.href = '/lobby';
+            // ...
+            } else {
+                
+                // Initialize the FirebaseUI Widget using 
+                var ui = new firebaseui.auth.AuthUI(firebase.auth());
+                var uiConfig = {
+                  callbacks: {
+                    signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+                      // User successfully signed in.
+                      // Return type determines whether we continue the redirect automatically
+                      // or whether we leave that to developer to handle.
+                      console.log('Sign in successfully! ');
+                      return true;
+                    },
+                    uiShown: function() {
+                      // The widget is rendered.
+                      // Hide the loader.
+                      // document.getElementById('loader').style.display = 'none';
+                    }
+                  },
+                  // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+                  //signInFlow: 'popup',
+                  signInSuccessUrl: '/lobby',
+                  signInOptions: [
+                    // Leave the lines as is for the providers you want to offer your users.
+                    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                    firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+                    //firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+                    //firebase.auth.GithubAuthProvider.PROVIDER_ID,
+                    {
+                        provider: firebase.auth.EmailAuthProvider.PROVIDER_ID,
+                        signInMethod: firebase.auth.EmailAuthProvider.EMAIL_LINK_SIGN_IN_METHOD
+                    }
+                    //firebase.auth.PhoneAuthProvider.PROVIDER_ID
+                  ],
+                  // Terms of service url.
+                  //tosUrl: '<your-tos-url>',
+                  // Privacy policy url.
+                  //privacyPolicyUrl: '<your-privacy-policy-url>'
+                };
+
+                // The start method will wait until the DOM is loaded.
+                ui.start('#firebaseui-auth-container', uiConfig);
+                
+            }
+        });
+
+    </script>
+
+    <!-- <script>
         function loginWithGoogle() {
             var provider = new firebase.auth.GoogleAuthProvider();
 
@@ -93,7 +176,7 @@
             }
         });
 
-    </script>
+    </script> -->
 
     </body>
 </html>
