navigate to /authen before entering /lobby

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,7 +112,7 @@
         }
 
         function createLobby(){
-            window.location.href = '/lobby'; // redirect to lobby
+            window.location.href = '/authen'; // redirect to lobby
         }
     </script>
 
