--- a/views/roomplay/roomplay.ejs
+++ b/views/roomplay/roomplay.ejs
@@ -11,7 +11,8 @@
     </head>
     <body>
     
-    <h3>Hello <span id="username"></span></h3>
+    <h3>Hello <span id="user"><%= currentPlayer%></span></h3>
+    <h3>Room ID: <span id="roomID"><%= currentRoom%></span></h3>
 
     <div class="container-fluid">
         <div class="center">
