--- a/views/roomplay/joinroom.ejs
+++ b/views/roomplay/joinroom.ejs
@@ -13,27 +13,28 @@
         <div class="center">
             <h1 class="logo">Bamboo!</h1>
             <div class="row">
-                <span> Room ID : <%= roomID%></span>
+                <span class="centering"> Room ID : <%= roomID%></span>
             </div>
             <div class="enterInput">
+                <div class="row">
+                    <span class="centering" id="message" style="color:#ff0000;"><%=message%></span>
+                </div>
+                <br>
                 <div class="row">
                     <input class="roomIDInput" type="text" name="roomID" value="" placeholder="Your Nickname" id="nickName">
                 </div>
                 
                 <div class="row">
-                    <button class="ButtonEnter" onclick="enterRoom()">Enter</button>
+                    <button class="ButtonEnter" onclick="enterRoomAsTemporaryUser()">Enter</button>
                 </div>
                 <br />
-                <div class="row">
-                    <span class="centering" ><%=message%></span>
-                </div>
                 <div id='userLoggedIn' style="display:None">
                     <div class="row">
                         <span class="centering">or</span>
                     </div>
                     <br />
                     <div class="row">
-                        <button class="ButtonEnter" id='userIdentity' onclick="enterRoomWithLoggedInUser()">Continue as </button>
+                        <button class="ButtonEnter" id='userIdentity' onclick="enterRoomAsLoggedInUser()">Continue as </button>
                     </div>
                 </div>
             </div>
@@ -51,6 +52,14 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
 
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+
     <script src="/javascript/config.js"></script>
     <script>
 
@@ -61,101 +70,76 @@
                 var uid = user.uid;
                 document.getElementById('userIdentity').innerText = 'Continue as '+displayName;
                 document.getElementById('userLoggedIn').style.display='';
-            } else {
-
             }
         });
-
-        function post(path, params, method) {
-            method = method || "post"; // Set method to post by default if not specified.
-
-            // The rest of this code assumes you are not using a library.
-            // It can be made less wordy if you use one.
-            var form = document.createElement("form");
-            form.setAttribute("method", method);
-            form.setAttribute("action", path);
-
-            for(var key in params) {
-                if(params.hasOwnProperty(key)) {
-                    var hiddenField = document.createElement("input");
-                    hiddenField.setAttribute("type", "hidden");
-                    hiddenField.setAttribute("name", key);
-                    hiddenField.setAttribute("value", params[key]);
-
-                    form.appendChild(hiddenField);
-                }
-            }
-
-            document.body.appendChild(form);
-            form.submit();
-        }
 
         const roomID = '<%= roomID%>';
         console.log('[DEBUG] room ID = '+ roomID);
 
-        function enterRoom(){    
+
+        var $jq = jQuery.noConflict();
+        function enterRoomAsTemporaryUser(){    
 
             // var roomID = document.getElementById('roomID').value;
             var nickName = document.getElementById('nickName').value;
             var theUrl = window.location.href+'authen/checkRoom';
 
-            console.log('[DEBUG] roomID = '+roomID);
-            console.log('[DEBUG] link = '+theUrl);
-
-            // Sign out 
-            firebase.auth().signOut().then(function() {
-                console.log('Signed Out');
-            }, function(error) {
-                console.error('Sign Out Error', error);
-            });
-
-            // Log in anonymous
-            firebase.auth().signInAnonymously().catch(function(error) {
-              // Handle Errors here.
-              var errorCode = error.code;
-              var errorMessage = error.message;
-              console.log('[ERROR] Sign in error !');
-              // ...
-            });
-
-            // Check user 
-            firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                    // User is signed in.
-                    var displayName = user.displayName;
-                    var uid = user.id;
-                    var isAnonymous = user.isAnonymous;
-
-                    // form submit 
-                    post('/authen/setNickName', {roomID: roomID, name: nickName, uid: uid});
-                } else {
-
+            console.log('[DEBUG] nickName = ' + nickName);
+            
+            $jq.ajax({
+                type: 'POST',
+                url: '/roomplay/checkNickName',
+                dataType: 'json',
+                data: {roomID: roomID, nickName: nickName, uid: '', playerType:'0'},
+                success: function(data) {
+                    // var roomJSON = $jq.parseJSON(data);
+                    console.log('[DEBUG]');
+                    console.log(data.isValidNickName);
+                    if(data.isValidNickName){
+                        // $jq.cookie('uid','player22', {
+                        //     expires: 10 // expires in 10 days
+                        // });
+                        // $jq.cookie('roomID',roomID, {
+                        //     expires: 10 // expires in 10 days
+                        // });
+                        window.location.href = '/roomplay/roomplay';
+                    }else{
+                        document.getElementById('message').innerHTML = 'Nick name existed !';
+                    }
+                },
+                error: function(xhr, ajaxOptions, thrownError) {
+                    // alert(xhr.status);
+                    // alert(thrownError);
                 }
             });
-
-
         }
 
-        function enterRoomWithLoggedInUser(){
-
+        function enterRoomAsLoggedInUser(){        
             firebase.auth().onAuthStateChanged(function(user) {
                 if (user && !user.isAnonymous) {
                     // User is signed in.
                     var displayName = user.displayName;
-                    var uid = 'anonymous';
-
-
-                    var theUrl = window.location.href+'authen/checkRoom';
-
-                    console.log('[DEBUG] roomID = '+roomID);
-                    console.log('[DEBUG] link = '+theUrl);
-
-                    // form submit 
-                    post('/authen/setNickName', {roomID: roomID, name: displayName, uid: uid});
-
-                    
-                } else {
-
+                    var uid = user.uid;
+                    $jq.ajax({
+                        type: 'POST',
+                        url: '/roomplay/checkNickName',
+                        dataType: 'json',
+                        data: {roomID: roomID, nickName: displayName, uid: uid, playerType:'0'},
+                        success: function(data) {
+                            // var roomJSON = $jq.parseJSON(data);
+                            console.log('[DEBUG]');
+                            console.log(data.isValidNickName);
+                            if(data.isValidNickName){
+                                window.location.href = '/roomplay/roomplay';
+                            }else{
+                                document.getElementById('message').innerHTML = 'Nick name existed !';
+                            }
+                        },
+                        error: function(xhr, ajaxOptions, thrownError) {
+                            // alert(xhr.status);
+                            // alert(thrownError);
+                        }
+                    });
                 }
             });
 
