Fix redirect reauth

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,7 +82,7 @@
                 var providerData = user.providerData;
 
                 // redirect to lobby
-                window.location.href = '/lobby';
+                window.location.href = '/lobby/<%= lobbyID %>';
             // ...
             } else {
                 
