--- a/views/login.ejs
+++ b/views/login.ejs
@@ -105,7 +105,7 @@
                   },
                   // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
                   //signInFlow: 'popup',
-                  signInSuccessUrl: '/lobby',
+                  signInSuccessUrl: '/lobby/<%= roomID%>',
                   signInOptions: [
                     // Leave the lines as is for the providers you want to offer your users.
                     firebase.auth.GoogleAuthProvider.PROVIDER_ID,
