--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -99,6 +99,9 @@
                     <div class="col-sm-12">
                         <button type="button" class="btn btn-outline-dark" onclick="back()">Back</button>
                     </div>
+                    <div class="col-sm-12">
+                        <button type="button" class="btn btn-outline-dark" onclick="enterWaitingRoom()">Enter Waiting Room</button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
@@ -208,6 +211,10 @@
                     // alert(thrownError);
                 }
             }) // End of AJAX
+        }
+
+        function enterWaitingRoom(){
+            window.location.href = '/host/gameView?roomID=<%= lobbyID%>';
         }
         // setInterval(getLobbyData, 1000);
 
