--- a/views/host/createQuestionPacks.ejs
+++ b/views/host/createQuestionPacks.ejs
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <div class="container-fluid">
-        <div class="row main">
+        <div class="row left">
             <div class="col-sm-4">
                 <div class="card">
 
