--- a/public/style/host/gameView.css
+++ b/public/style/host/gameView.css
@@ -25,6 +25,23 @@ body {
     font-size: 2em;
 }
 
+.question {
+    margin-top: 2rem;
+}
+
+.question h1 {
+    max-width: 100rem;
+    margin: auto;
+}
+
+.answer {
+    width:100%;
+    height:100%;
+    background-color: white;
+    color: black;
+    font-size: 28pt;
+}
+
 #title1, #title2{
     text-align: center;
     color: black;
