--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -58,7 +58,7 @@
             <div class="pos-f-t">
               <nav class="navbar navbar-dark bg-dark">
                 <div class="col-md-12 text-center">
-                <h1 class="h1" style="color:#fff;" id="question"></h1> 
+                <h1 class="h1" style="color:#fff;" id="questionNumber"></h1> 
                 </div>
               </nav>
             </div>
@@ -68,54 +68,24 @@
                 <!-- 70% Complete (danger) -->
               </div>
             </div>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-              </ol>
-
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="la.jpg" alt="Pic 1">
-                </div>
-
-                <div class="item">
-                  <img src="chicago.jpg" alt="Pic 2">
-                </div>
-
-                <div class="item">
-                  <img src="ny.jpg" alt="Pic 3">
-                </div>
-              </div>
-
-              <!-- Left and right controls -->
-              <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-              </a>
+            <div class="row question">
+                <h1 class="h1" style="color:#000;" id="question"></h1> 
             </div>
             <div class="fixed-bottom" style="margin: 20px;">
                 <div class="row">
                     <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="A" name="singlebutton" class="btn btn-primary" style="width:100%;height:100%;background: #D84A4A;">A</button> 
+                        <button id="A" name="singlebutton" class="btn btn-primary answer answer-A">A</button> 
                     </div>
                     <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="B" name="singlebutton" class="btn btn-primary" style="width:100%;height:100%;background: #5067DB;">B</button> 
+                        <button id="B" name="singlebutton" class="btn btn-primary answer answer-B">B</button> 
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="C" name="singlebutton" class="btn btn-primary" style="width:100%;height:100%;background: #66DA66;">C</button> 
+                        <button id="C" name="singlebutton" class="btn btn-primary answer answer-C">C</button> 
                     </div>
                     <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="D" name="singlebutton" class="btn btn-primary" style="width:100%;height:100%;background: #E1DD7F;">D</button> 
+                        <button id="D" name="singlebutton" class="btn btn-primary answer answer-D">D</button> 
                     </div>
                 </div>
             </div>
@@ -132,8 +102,8 @@
 
     <script>
         var $jq = jQuery.noConflict();
-        var idQuestion = 1;
-        var numQuestions = 10;
+        var questionNumber = 1;
+        var numQuestions = 2;
 
         var t;
         function waitingMode()
@@ -167,20 +137,29 @@
             $("#waiting").hide();
             $("#playing").show();
 
+            displayQuestion();
+            
+        }
+
+
+        function displayQuestion() {
             $jq.ajax({
                 type: 'GET',
-                url: '/lobbyData/question?roomID=<%= roomID%>&questionID='+idQuestion.toString(),
+                url: '/lobbyData/question?roomID=<%= roomID %>&questionPacksId=<%= questionPacksId %>&questionNumber=' + questionNumber.toString(),
                 dataType: 'text',
                 success: function(data) {
                     data = JSON.parse(data);
                     if (data == null) {
                         console.log('[ERROR] Can not onnect to server');
                     }else {
+                        //reset progress bar
+                        $("#progressBar").css('width','0%');
                         // $("#numPlayers").html(Object.keys(JSON.parse(data)).length.toString()+' players');
                         $("#A").html(data.a);
                         $("#B").html(data.b);
                         $("#C").html(data.c);
                         $("#D").html(data.d);
+                        $("#questionNumber").html("Question " + questionNumber.toString());
                         $("#question").html(data.question);
                         limit = data.limit;
                         currentTime=0;
@@ -194,6 +173,15 @@
                         }, 1000);
                         setTimeout(function(){
                             clearInterval(p);
+                            //TODO: Show players result
+                            //Next question
+                            if (questionNumber < numQuestions) {
+                                questionNumber++;
+                                displayQuestion();
+                            }
+                            else {
+                                alert("Game end!");
+                            }
                         }, 1000*(limit+2));
                     }
                 },
