Complete question packs creation, still need upload image

--- a/public/style/host/lobby.css
+++ b/public/style/host/lobby.css
@@ -6,6 +6,16 @@ body {
     margin-top: 2rem;
 }
 
+#image {
+    max-height: 22.5rem;
+    max-width: 40rem;
+}
+
+#image:hover {
+    /* filter: blur(2px); */
+    filter: brightness(0.5);
+}
+
 #question-list {
     max-height: 42rem;
     overflow-y: scroll;
