--- a/views/host/createQuestionPacks.ejs
+++ b/views/host/createQuestionPacks.ejs
@@ -26,27 +26,33 @@
         <div class="row left">
             <div class="col-sm-4">
                 <div class="card">
-
-                    <img src="./images/no-image-available.jpg" class="card-img-top" alt="...">
+                    <img src="./images/no-image-available.jpg" class="card-img-top" id="image" alt="..." onclick="setImage()">
+                    <input type='file' id="imgInp" hidden/>
                     <div class="card-body">
                         <!-- <h5 class="card-title">Card title</h5> -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" style="width:8rem">Title</span>
                             </div>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="title">
                         </div>
                         <div class="input-group desc-edit">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" style="width:8rem">Description</span>
                             </div>
-                            <textarea class="form-control"></textarea>
+                            <textarea class="form-control" id="description"></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 mt-3">
+                    <div class="col-sm-2 mt-3">
                         <button type="button" class="btn btn-outline-dark" onclick="back()">Back</button>
+                    </div>
+                    <div class="col-sm-8 mt-3 ">
+                        
+                    </div>
+                    <div class="col-sm-2 mt-3 ">
+                        <button type="button" class="btn btn-success" onclick="Submit()">Submit</button>
                     </div>
                 </div>
             </div>
@@ -57,10 +63,28 @@
                             <div class="card col-sm-12">
                                 <div class="card-body">
                                     <div class="row d-flex justify-content-between ml-1 mr-1">
-                                        <h5 class="card-title">Question</h5>
+                                        <div class="col-sm-2">
+                                            <h5 class="card-title">Question</h5>
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <div class="form-group">
+                                                <label>Answer</label>
+                                                <select class="form-control answer">
+                                                    <option value="A" selected="selected">A</option>
+                                                    <option value="B">B</option>
+                                                    <option value="C">C</option>
+                                                    <option value="D">D</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <label>Time limit</label>
+                                                <input class="form-control limit" type="number" />
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label>Content</label>
+                                    <div class="form-group mt-2">
                                         <textarea class="form-control question-text-edit"
                                             id="exampleFormControlTextarea1" rows="3"></textarea>
                                     </div>
@@ -70,7 +94,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">A</span>
                                                 </div>
-                                                <input type="text" class="form-control">
+                                                <input type="text" class="form-control A" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
@@ -78,7 +102,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">B</span>
                                                 </div>
-                                                <input type="text" class="form-control">
+                                                <input type="text" class="form-control B" />
                                             </div>
                                         </div>
                                     </div>
@@ -88,7 +112,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">C</span>
                                                 </div>
-                                                <input type="text" class="form-control">
+                                                <input type="text" class="form-control C" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
@@ -96,7 +120,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">D</span>
                                                 </div>
-                                                <input type="text" class="form-control">
+                                                <input type="text" class="form-control D" />
                                             </div>
                                         </div>
                                     </div>
@@ -165,12 +189,36 @@
                 console.error('Sign Out Error', error);
             });
         }
+
+        function setImage() {
+            $jq('#imgInp').click();
+        }
+
+        function readURL(input) {
+
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    $jq('#image').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $jq(document).ready(function() {
+            $jq("#imgInp").change(function() {
+                readURL(this);
+            });
+        });
+
         var nextQ = 1;
 
         function AddQuestion() {
             nextQ++;
             let questionList = $jq("#question-list");
-            childStr = "<div id=\"q" + nextQ + "\" class=\"row\"> <div class=\"card col-sm-12\"> <div class=\"card-body\"> <div class=\"row d-flex justify-content-between ml-1 mr-1\"> <h5 class=\"card-title\">Question</h5> <button type=\"button\" class=\"btn btn-danger\" onclick=\"Delete(" + nextQ + ")\">Delete</button> </div> <div class=\"form-group\"> <label>Content</label> <textarea class=\"form-control question-text-edit\" id=\"exampleFormControlTextarea1\" rows=\"3\"></textarea> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">A</span> </div> <input type=\"text\" class=\"form-control\"> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">B</span> </div> <input type=\"text\" class=\"form-control\"> </div> </div> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">C</span> </div> <input type=\"text\" class=\"form-control\"> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">D</span> </div> <input type=\"text\" class=\"form-control\"> </div> </div> </div> </div> </div> </div>";
+            childStr = "<div id=\"q" + nextQ + "\" class=\"row\"> <div class=\"card col-sm-12\"> <div class=\"card-body\"> <div class=\"row d-flex justify-content-between ml-1 mr-1\"> <div class=\"col-sm-2\"> <h5 class=\"card-title\">Question</h5> </div> <div class=\"col-sm-3\"> <div class=\"form-group\"> <label>Answer</label> <select class=\"form-control answer\"> <option value=\"A\" selected=\"selected\">A</option> <option value=\"B\">B</option> <option value=\"C\">C</option> <option value=\"D\">D</option> </select> </div> </div> <div class=\"col-sm-4\"> <div class=\"form-group\"> <label>Time limit</label> <input class=\"form-control limit\" type=\"number\" /> </div> </div> </div> <div class=\"form-group mt-2\"> <textarea class=\"form-control question-text-edit\" id=\"exampleFormControlTextarea1\" rows=\"3\"></textarea> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">A</span> </div> <input type=\"text\" class=\"form-control A\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">B</span> </div> <input type=\"text\" class=\"form-control B\" /> </div> </div> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">C</span> </div> <input type=\"text\" class=\"form-control C\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">D</span> </div> <input type=\"text\" class=\"form-control D\" /> </div> </div> </div> </div> </div> </div>";
             questionList.append(childStr);
         }
 
@@ -178,6 +226,73 @@
             let questionList = $jq("#q" + id);
             questionList.remove();
         }
+
+        function CheckAndGet() {
+            var json= {};
+            // Title
+            let title = $jq("#title").val(); 
+            // Description
+            let description = document.getElementById("description").value;
+            // alert(description);
+            if ($jq("#title").val() == "") {
+                alert("Please enter title!");
+                return false;
+            }
+            if (description == "") {
+                alert("Please enter description!");
+                return false;
+            }
+
+            let qList = $jq("#question-list").children();
+            var questions = {};
+            var validTimeLimit = true;
+            qList.each(function(index) {
+                let question = $jq(this).find("textarea").val();
+                let a = $jq(this).find(".A").val();
+                let b = $jq(this).find(".A").val();
+                let c = $jq(this).find(".A").val();
+                let d = $jq(this).find(".A").val();
+                let answer = $jq(this).find(".answer").val();
+                let limitText = $jq(this).find(".limit").val();
+                let limit = parseInt(limitText);
+                if (limit < 5) {
+                    alert("Limit time is invalid at question " + index);
+                    validTimeLimit = false;
+                }
+                if (limitText == "") {
+                    alert("Limit time is not set at question " + index);
+                    validTimeLimit = false;
+                }
+                questions['question' + index] = {
+                    question: question,
+                    a: a,
+                    b: b,
+                    c: c,
+                    d: d,
+                    limit: limitText,
+                    answer: answer,
+                    status: 'end',
+                };
+            });
+            if (validTimeLimit == false) {
+                return false;
+            }
+            
+            json = {
+                title: title,
+                description: description,
+                questions: questions
+            };
+            return json;
+        }
+        
+        function Submit() {
+            var json = CheckAndGet();
+            if (json != false) {
+                alert(JSON.stringify(json));
+            }
+        }
+
     </script>
 
 </body>
